force-app/main/default/objects/Sales_Territory__c/Sales_Territory__c.object-meta.xml
<CustomObject>
    <label>Sales Territory</label>
    <nameField>
        <label>Sales Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>