force-app/main/default/objects/Sales_Territory__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked when sales territory is active</description>
    <inlineHelpText>Checked when sales territory is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>