force-app/main/default/objects/Sales_Territory__c/fields/Assigned_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Sales Rep</description>
    <inlineHelpText>User assigned to this sales territory</inlineHelpText>
    <label>Assigned Sales Representative</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Assigned user is inactive</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>