force-app/main/default/objects/Sales_Territory__c/fields/Territory_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Territory_Alignment__c</fullName>
    <label>Territory Alignment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>